fix: Adicionar BASE_URL ao .env.example para configuração OAuth dinâmica

--- a/.env.example
+++ b/.env.example
@@ -39,6 +39,11 @@ APP_ENV=test
 GOOGLE_CLIENT_ID=your_google_client_id_here
 GOOGLE_CLIENT_SECRET=your_google_client_secret_here
 
+# URL Base da Aplicação (para OAuth callbacks)
+# Para PRODUÇÃO: BASE_URL=https://janice.marketing
+# Para TESTE: BASE_URL=https://janice-test-production.up.railway.app
+BASE_URL=https://janice-test-production.up.railway.app
+
 # Configurações de Sessão
 SESSION_SECRET=your_session_secret_here
 
